
# 0,1,0,20201229
	Armature.arrach operator bug fixed
	Hair guide from curve operator compatibility issue with Blender 2.91 fix.

# 0,1,0,20201227
	Delete_plus for object mode keep children transform on parent delete. ('Delete' Max mode)
	1,2,3 disabled for non converted primitive objects.
	Link_to operator issue with transformed parent Re-Link to other object fixed.
	'pose.select_hierarchy_plus' tool replased with 'pose.select_hierarchy' for defult blender mode. ('[' ']' in Blender mode).
	"DoublClick" select children in Pose mode (Blender mode)
	Additional object (Mesh,Curve,Text) can attach to bone custome shape in pose mode (works on Rest Positon mode).
	Transform/Rotation to Zero reset bone for pose mode rather than the armature position.

# 0,1,0,20201221
	Additional Primitives are create from search box (Search for 'Create' then choose the type).
	Additional Primitives are create from python Script (https://github.com/NevilArt/BsMax_2_80/wiki/bpy.ops.object.create).

# 0,1,0,20201216
	Create empty frame for using as joysticks border added for 'Joystic Creator'.
	'Ctrl + RMB' Select extended in max mode works better now.

# 0,1,0,20201215
	'Attach' tool collaps target objects modifiers before join. (for now works only for Mesh objects)

# 0,1,0,20201213
	Smart loop/ring tools from 'maxivz_tools' addon updated.
	'Convert to' and 'Join Plus' tools updated to 'No Mercy' mode (Modifier apply, Make unique, clear primitives data).
	'Join Plus' issue with armature objects fixed.
	New 'pose.select_hierarchy_plus' tool select child/parent in pose mode better than original one.
	'Ctrl + L' do 'Attribute link' if object selected do 'Light toggle' if not obj selected (Max Mode)
	Node editor 'Zoom extended' error on empty node editor has fixed ('Z' in max mode).
	Joystick connector status check updated to avoid displaying error messages.
	'Detach' command in quad menu issue fixed and now it works.

# 0,1,0,20201206
	Undo issue fixed for most of the Operators.