@@ -24,16 +24,20 @@ def frame_Update(scene):
 def depsgraph_update(scene):
 	""" called on each click and check the time slider header collor """
 	if bpy.context.scene.tool_settings.use_keyframe_insert_auto:
-		bpy.context.preferences.themes[0].dopesheet_editor.space.header = (0.5, 0.0, 0.0, 1.0)
+		color = (0.5, 0.0, 0.0, 1.0)
 	else:
-		bpy.context.preferences.themes[0].dopesheet_editor.space.header = (0.2588, 0.2588, 0.2588, 1.0)
+		color = (0.2588, 0.2588, 0.2588, 1.0)
+	
+	# this action cuse the crash blender whene image object sclaed or moved via corner dots
+	# need to be sure is mouse over the timeline then call this action
+	# bpy.context.preferences.themes[0].dopesheet_editor.space.header = color
 
 def register_frameupdate():
-	bpy.app.handlers.frame_change_pre.append(frame_Update)
+	# bpy.app.handlers.frame_change_pre.append(frame_Update)
 	bpy.app.handlers.depsgraph_update_pre.append(depsgraph_update)
 
 def unregister_frameupdate():
-	bpy.app.handlers.frame_change_pre.remove(frame_Update)
+	# bpy.app.handlers.frame_change_pre.remove(frame_Update)
 	bpy.app.handlers.depsgraph_update_pre.remove(depsgraph_update)
 
 if __name__ == "__main__":
