@@ -1,4 +1,10 @@
 
+# 0,1,0,20210103
+	Submit Render jobs to Backburner (Original code from "Matt Ebb | Blaize | Anthony Hunt | Spirou4D") (For Now Windows Only).
+	Updated "Backburner" addon for Blender 2.8x, 2.9x.
+	Add Specific Frames type ('1,3,5-7') to "Backburner" tool.
+	'Ctrl+Shift+A' Create primitive Menu added to blender key-maps mode.
+
 # 0,1,0,20201229
 	Armature.arrach operator bug fixed
 	Hair guide from curve operator compatibility issue with Blender 2.91 fix.
